test/resources/parser/failing/MatchOperand2.scala
object M {
    1 match { case 1 => 0 } + 2
}